--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-**草、秸秆、发霉的粮食变汽油（多乙烷）：**
+草、秸秆、发霉的粮食变汽油（多乙烷）：
 将草、秸秆、发霉的粮食粉碎，倒入反应罐，在底部向反应罐里充足够的氧气，等到反应罐顶部臭氧传感器检测到臭氧，随后臭氧逐渐消失，反应就结束了，反应罐里上边是水，下边是多乙烷（汽油）。汽油在销售给客户（使用者）之前必须通过爆震检测，爆震合格证书各个加油站认定属实才能销售呢。
 
 冷核聚变反应堆原理：
