--- a/README
+++ b/README
@@ -1,8 +1,3 @@
-草、秸秆、发霉的粮食变汽油（多乙烷）：
-将草、秸秆、发霉的粮食粉碎，倒入反应罐，在底部向反应罐里充足够的氧气，等到反应罐顶部臭氧传感器检测到臭氧，随后臭氧逐渐消失，反应就结束了，反应罐里上边是水，下边是多乙烷（汽油）。汽油在销售给客户（使用者）之前必须通过爆震检测，爆震合格证书各个加油站认定属实才能销售呢。
-
-冷核聚变反应堆原理：
-反应堆是球形的，中心放置液氢球，液氢球由塑料支架定形，还有一个副球，假定副球半径是液氢球的2倍，主球半径与副球半径的关系根据公式R1=k1*R2计算获得，K1的值是1.205071，反应的过程：向副球充氦气，当气压达到400标准大气压以上时，停止向副球充氦气，打开副球和主球之间的阀门到1/4，向主球充氦气，当聚变反应开始，主球表面温度达到600摄氏度时，关闭阀门。主球和副球及连接管路用金属钛制作能满足反复使用的要求，如用单晶金属钛则效果更好，这两个球及连接管路壁厚必须大于5cm。1kg的液氢每小时发出电能60万千瓦，反应持续时间是7天整，液氢球半径14.99756cm，副球半径是29.99512cm，主球半径是36.14625cm。
-
-单晶金属钛制备：
-将金属钛加热到沸腾，继续加热至发出白亮的光，像太阳一样，冷却以后，单晶金属钛就制作好了。
+<p><strong>草、秸秆、发霉的粮食变汽油（多乙烷）：</strong><br>将草、秸秆、发霉的粮食粉碎，倒入反应罐，在底部向反应罐里充足够的氧气，等到反应罐顶部臭氧传感器检测到臭氧，随后臭氧逐渐消失，反应就结束了，反应罐里上边是水，下边是多乙烷（汽油）。汽油在销售给客户（使用者）之前必须通过爆震检测，爆震合格证书各个加油站认定属实才能销售呢。<br><br>
+<strong>冷核聚变反应堆原理：</strong><br>反应堆是球形的，中心放置液氢球，液氢球由塑料支架定形，还有一个副球，假定副球半径是液氢球的2倍，主球半径与副球半径的关系根据公式R1=k1*R2计算获得，K1的值是1.205071，反应的过程：向副球充氦气，当气压达到400标准大气压以上时，停止向副球充氦气，打开副球和主球之间的阀门到1/4，向主球充氦气，当聚变反应开始，主球表面温度达到600摄氏度时，关闭阀门。主球和副球及连接管路用金属钛制作能满足反复使用的要求，如用单晶金属钛则效果更好，这两个球及连接管路壁厚必须大于5cm。1kg的液氢每小时发出电能60万千瓦，反应持续时间是7天整，液氢球半径14.99756cm，副球半径是29.99512cm，主球半径是36.14625cm。<br><br>
+<strong>单晶金属钛制备：</strong><br>将金属钛加热到沸腾，继续加热至发出白亮的光，像太阳一样，冷却以后，单晶金属钛就制作好了。<p>
